--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,18 @@
             <artifactId>velocity</artifactId>
             <version>1.7</version>
         </dependency>
-
+       
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>13.0.1</version>
+        </dependency>
+      
+        <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client</artifactId>
+            <version>1.13.1-beta</version>
+        </dependency> 
     </dependencies>
 
     <build>
