--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,19 @@
             <artifactId>google-http-client</artifactId>
             <version>1.13.1-beta</version>
         </dependency> 
+
+        <dependency>
+            <groupId>com.yworks</groupId>
+            <artifactId>yfiles</artifactId>
+            <version>2.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.spullara.mustache.java</groupId>
+            <artifactId>compiler</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -57,6 +70,14 @@
                 </configuration>
             </plugin>
 
+
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
