--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <version>1.1-SNAPSHOT</version>
     <name>firewall-config</name>
     <url>http://maven.apache.org</url>
+
+    <repositories>
+        <repository>
+            <id>pne</id>
+            <name>payneteasy repo</name>
+            <url>https://maven.pne.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
 
         <dependency>
@@ -64,6 +73,24 @@
             <version>4.6.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.32</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.payneteasy.http-client</groupId>
+            <artifactId>http-client-impl</artifactId>
+            <version>1.0-8</version>
+        </dependency>
     </dependencies>
 
     <build>
